fix(dependabot): exclude alwatr deps from production/development updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -36,10 +36,15 @@ updates:
     groups:
       production-dependencies:
         dependency-type: "production"
+        exclude-patterns:
+          - "@alwatr/*"
+          - "fract"
       development-dependencies:
         dependency-type: "development"
         exclude-patterns:
           - "*lint*"
+          - "@alwatr/*"
+          - "fract"
       lint-dependencies:
         patterns:
           - "*lint*"
